TestRepo2/src/objects/BrandBottle_Size__c.object
<CustomObject>
    <fields>
        <fullName>Bottle_Size__c</fullName>
        <label>Bottle Size</label>
        <referenceTo>Bottle_Size__c</referenceTo>
        <relationshipLabel>BrandBottle Sizes</relationshipLabel>
        <relationshipName>BrandBottle_Sizes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>BrandBottle Sizes</relationshipLabel>
        <relationshipName>BrandBottle_Sizes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>BrandBottle Size</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Bottle_Size__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BrandBottle Size Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IK0000000D1zCMAS_00NK0000000WQ6TMAW</fullName>
        <active>true</active>
        <field>Survey_Layout_Brand_Bottle_Item__c.BrandBottle_Size__c</field>
        <filterItems>
            <field>BrandBottle_Size__c.Brand__r.Innovation__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <filterItems>
            <field>BrandBottle_Size__c.Brand__r.Brand_Type__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Survey Innovation / Sustainovation_Brand</name>
    </namedFilters>
    <pluralLabel>BrandBottle Sizes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>